Custom cart integration using Mediaclip Shopify JavaScript Cart API

--- a/sections/main-cart-items.liquid
+++ b/sections/main-cart-items.liquid
@@ -48,7 +48,7 @@
       {%- endif -%}
     </div>
 
-    <form action="{{ routes.cart_url }}" class="cart__contents critical-hidden" method="post" id="cart">
+    <form action="/tools/customize/handle-cart-form" class="cart__contents critical-hidden" method="post" id="cart">
       <div class="cart__items" id="main-cart-items" data-id="{{ section.id }}">
         <div class="js-contents">
           {%- if cart != empty -%}
@@ -79,14 +79,80 @@
 
               <tbody>
                 {%- for item in cart.items -%}
-                  <tr class="cart-item" id="CartItem-{{ item.index | plus: 1 }}">
+                  {%- liquid
+                    assign is_mc_project_line = false
+                    assign item_image_url = blank
+                    assign mc_project_id = blank
+                    assign edit_project_url = blank
+                    assign hide_line_item = false
+                    assign is_mediaclip_line = false
+                    if item.properties._app == 'mediaclip'
+                      assign is_mediaclip_line = true
+                      if item.properties._isMainPart == 'true'
+                        assign is_main_part = true
+                      else
+                        assign is_main_part = false
+                      endif
+                    endif
+                    assign original_item_image_url = blank
+                    if item.image
+                      assign original_item_image_url = item.image | image_url: width: 300
+                    endif
+                    assign item_image_url = original_item_image_url
+                    if is_mediaclip_line
+                      assign mc_project_id = item.properties._projectId
+                      assign is_mc_project_line = true
+                      assign edit_project_url = 'tools/customize?projectId=' | append: mc_project_id
+                      if item.properties._moduleType != 'Print'
+                        comment
+                          Handle special case of Buy X Get Y discounts, the cartQuantity is the sum of
+                          all the lines.
+                        endcomment
+                        assign project_quantity = 0
+                        for cart_item in cart.items
+                          if cart_item.properties._isMainPart != 'true'
+                            continue
+                          endif
+                          if cart_item.properties._projectId != mc_project_id
+                            continue
+                          endif
+                          assign project_quantity = project_quantity | plus: cart_item.quantity
+                        endfor
+                        assign edit_project_url = edit_project_url | append: '&cartQuantity=' | append: project_quantity | append: '&fromCart=true'
+                      endif
+                      if is_main_part == false
+                        assign hide_line_item = true
+                      endif
+                      if item.properties._imageurl
+                        assign item_image_url = item.properties._imageurl
+                      endif
+                    endif
+                  -%}
+
+                  <tr
+                    class="cart-item"
+                    id="CartItem-{{ forloop.index }}"
+                    {% if hide_line_item %}
+                      aria-hidden="true"
+                      style="display: none"
+                    {% endif %}
+                    data-mc-shopify-cart-item-index="{{ forloop.index0 }}"
+                    data-mc-shopify-cart-item-line="{{ forloop.index }}"
+                    data-mc-shopify-cart-item-key="{{ item.key }}"
+                    data-mc-shopify-variant-id="{{ item.variant.id }}"
+                    {% if is_mc_project_line %}
+                      data-mc-module="{{ item.properties._moduleType }}"
+                      data-mc-project-id="{{ mc_project_id }}"
+                      data-mc-main-part="{{ is_main_part }}"
+                    {% endif %}
+                  >
                     <td class="cart-item__media">
-                      {% if item.image %}
+                      {% if item_image_url %}
                         {% comment %} Leave empty space due to a:empty CSS display: none rule {% endcomment %}
                         <a href="{{ item.url }}" class="cart-item__link" aria-hidden="true" tabindex="-1"> </a>
                         <div class="cart-item__image-container gradient global-media-settings">
                           <img
-                            src="{{ item.image | image_url: width: 300 }}"
+                            src="{{ item_image_url }}"
                             class="cart-item__image"
                             alt="{{ item.image.alt | escape }}"
                             loading="lazy"
@@ -450,6 +516,150 @@
     </form>
   </div>
 </cart-items>
+
+<script>
+  const inputDebounce = (wait, fn) => {
+    let timeout;
+    return (...args) => {
+      const later = async () => {
+        timeout = undefined;
+        fn(...args);
+      };
+      clearTimeout(timeout);
+      timeout = setTimeout(later, wait);
+    };
+  };
+
+  const displayValidationMessages = (errors) => {
+    // First, Remove all existing validation messages
+    document.querySelectorAll('.validation-error-message').forEach(el => el.remove());
+
+    for (let error of errors) {
+      console.debug('Processing validation error', error);
+
+      // Select the appropriate cart item element
+      let cartLineItemElement = error.projectId
+              ? document.querySelector(`[data-mc-project-id='${error.projectId}']`)
+              : document.querySelector(`[data-mc-shopify-variant-id='${error.variantId}']`);
+
+      if (cartLineItemElement) {
+        let validationMessageElement = document.createElement('tr');
+        validationMessageElement.className = 'validation-error-message';
+
+        let validationMessageCellElement = document.createElement('td');
+        validationMessageCellElement.setAttribute('colspan', '3');
+        validationMessageCellElement.style.color = 'red';
+        validationMessageCellElement.innerHTML = `An error occurred when validating this project (${error.problemId})`;
+
+        validationMessageElement.appendChild(validationMessageCellElement);
+        cartLineItemElement.insertAdjacentElement("afterend", validationMessageElement);
+      }
+    }
+  };
+
+  const refreshThumbnails = async (mediaclipCartApi) => {
+    // Call the async function to refresh thumbnails
+    let refreshResult = await mediaclipCartApi.refreshMediaclipProjectThumbnails();
+    // Check if we have thumbnail URLs in the result
+    if (refreshResult && refreshResult.thumbnailUrlsPerProjectId) {
+      Object.entries(refreshResult.thumbnailUrlsPerProjectId).forEach(([projectId, thumbnailUrl]) => {
+        const projectElement = document.querySelector(`[data-mc-project-id="${projectId}"]`);
+        if (projectElement) {
+          const imageElement = projectElement.querySelector('.cart-item__image');
+          if (imageElement && thumbnailUrl) {
+            imageElement.src = thumbnailUrl;
+          }
+        }
+      });
+    }
+  }
+
+  const setupQuantityChangeButtons = (mediaclipCartApi) => {
+    let visibleCartItems = mediaclipCartApi.getMainAndNonMediaclipItems();
+    for (let cartItem of visibleCartItems) {
+      let quantityInputElement = document.querySelector(
+              `[data-mc-shopify-cart-item-line='${cartItem.identifier.line}'] input[name='updates[]'], select[name='updates[]']`
+      );
+      quantityInputElement.addEventListener(
+              "change",
+              inputDebounce(600, async (event) => {
+                // Disable the other cart buttons to prevent concurrent operations that could lead to inconsistent state
+                document.getElementById("checkout").disabled = true;
+
+                // Update the quantity of the line item and update related lines (synchronize quantities/secondary parts)
+                mediaclipCartApi.setMainItemQuantity(cartItem, +quantityInputElement.value);
+
+                // Save changes (And re-render cart if sections were registered in mediaclipCartApi.init())
+                await mediaclipCartApi.saveCart();
+                document.getElementById("checkout").disabled = false;
+              })
+      );
+    }
+  }
+
+  const setupCheckoutButton = (mediaclipCartApi) => {
+    let checkoutButton = document.getElementById('checkout');
+    checkoutButton.addEventListener('click', async (event) => {
+      console.debug('Checkout button clicked', event);
+
+      // Prevent default checkout behavior
+      event.preventDefault();
+
+      // Disable the Checkout button until validation result
+      checkoutButton.disabled = true;
+
+      // Run validation
+      let validationResult = await mediaclipCartApi.executeMediaclipValidationAndFixCart(false);
+      console.debug('Validation result', validationResult);
+
+      // Interpret the validation result
+      if (validationResult.result === "Error") {
+        displayValidationMessages(validationResult.errors);
+      } else if (validationResult.result === "Fixed") {
+        displayValidationMessages(validationResult.errors);
+        await mediaclipCartApi.saveCart();
+      } else if (validationResult.result === "Ok") {
+        checkoutButton.form.submit();
+      }
+
+      checkoutButton.disabled = false;
+    });
+  }
+
+  let onMediaclipReady = async () => {
+    console.debug('onMediaclipReady')
+
+    let mediaclipShopify = window.mediaclipShopify;
+    let mediaclipCartApi = mediaclipShopify.getCartApi();
+    await mediaclipCartApi.init(
+      ["main-cart-items", "cart-icon-bubble"], // list of section to be re-render when the cart is udpated
+      null,
+      (updatedSections) => {
+        // replace the HTML with the re-rendered sections
+        document.getElementById("main-cart-items").innerHtml = updatedSections["main-cart-items"];
+        document.getElementById("cart-icon-bubble").innerHtml = updatedSections["cart-icon-bubble"];
+        // subscribe to the quantity changes (see section Handle quantity changes)
+        setupQuantityChangeButtons(mediaclipCartApi);
+      }
+    );
+
+    setupQuantityChangeButtons(mediaclipCartApi);
+    setupCheckoutButton(mediaclipCartApi);
+    refreshThumbnails(mediaclipCartApi);
+
+    document.getElementById('checkout').disabled = false;
+  }
+
+  document.addEventListener("DOMContentLoaded", async () => {
+    if (window.mediaclipShopify === undefined) {
+      document.addEventListener('OnMediaclipShopifyReady', async () => {
+        await onMediaclipReady();
+      })
+    } else {
+      await onMediaclipReady();
+    }
+  });
+</script>
 
 {% schema %}
 {
