--- a/sections/main-cart-footer.liquid
+++ b/sections/main-cart-footer.liquid
@@ -108,6 +108,7 @@
                 <button
                   type="submit"
                   id="checkout"
+                  disabled
                   class="cart__checkout-button button"
                   name="checkout"
                   {% if cart == empty %}
@@ -147,7 +148,7 @@
     {
       "type": "header",
       "content": "t:sections.all.padding.section_padding_heading"
-    },    
+    },
     {
       "type": "range",
       "id": "padding_top",
